--- a/src/components/layout/posts/collection/PostCollectionStyles.scss
+++ b/src/components/layout/posts/collection/PostCollectionStyles.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
 
+
   &:hover {
     background-color: white;
     color: black;
@@ -48,6 +49,7 @@
   height: 350px;
   align-items: center;
   position: relative;
+  padding: 10px 40px;
 
   .image {
     width: 100%;
